fixed button alignment

--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ body {
     width: 90%;
     height: 80%;
     object-fit: contain;
-    margin: 2%;
+    margin: 5%;
+    margin-top: 10%;
 }
 
 .sloganCol {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
 }
 
 .slogan1 {
@@ -71,6 +71,12 @@ body {
     margin-bottom: 0px;
 }
 
+.addItemButtonCol {
+    display: flex;
+    justify-content: flex-end;
+    align-self: center;
+}
+
 .addItemButton {
     background-color: rgb(227, 227, 227);
     color: black;
@@ -80,5 +86,4 @@ body {
     padding: 1px 16px;
     font-size: 1.75vw; /* Adjust font size */
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    margin-left: 70%;
 }
